# my-ecs

./: .gitignore  Cargo.toml  README.md  debug.sh  run.sh
.github/workflows/: check.yml  safety.yml
crates/my-ecs/: .gitignore  Cargo.toml  README.md  run.sh
crates/my-ecs-macros/: .gitignore  Cargo.toml
crates/my-ecs-macros/src/: lib.rs
crates/my-ecs-util/: Cargo.toml  README.md
crates/my-ecs-util/src/: lib.rs  macros.rs  str.rs
crates/my-ecs-util/src/ds/: arr.rs  borrow.rs  fut.rs  list.rs  map.rs  mod.rs  ptr.rs  queue.rs  raw.rs  signal.rs  types.rs
crates/my-ecs-util/src/ds/vec/: any_vec.rs  chunk_any_vec.rs  dedup_vec.rs  opt_vec.rs  vec_pool.rs
crates/my-ecs/docker/dev/: Dockerfile
crates/my-ecs/examples/: async.rs  async_io.rs  parallel.rs
crates/my-ecs/src/: lib.rs
crates/my-ecs/src/default/: ent_cont.rs  mod.rs  resource.rs  worker.js  worker.rs
crates/my-ecs/src/ecs/: cache.rs  cmd.rs  entry.rs  lock.rs  mod.rs  post.rs  resource.rs  wait.rs  web.rs  worker.rs
crates/my-ecs/src/ecs/ent/: component.rs  entity.rs  mod.rs  storage.rs
crates/my-ecs/src/ecs/sched/: comm.rs  ctrl.rs  mod.rs  par.rs  task.rs
crates/my-ecs/src/ecs/sys/: mod.rs  query.rs  request.rs  select.rs  storage.rs  system.rs
crates/my-ecs/src/mock/: cb_deque.rs  mod.rs
crates/my-ecs/src/util/: mod.rs  web.rs
crates/my-ecs/tests/: test.rs
crates/my-ecs/tests-other/san/: thread.rs
crates/my-ecs/tests-other/web/: .gitignore  Cargo.toml  index.html  package.json
crates/my-ecs/tests-other/web/.cargo/: config.toml
crates/my-ecs/tests-other/web/src/: lib.rs
crates/my-ecs/tests-other/web/tests/: test.spec.ts
crates/my-utils/: .gitignore  Cargo.toml  README.md
crates/my-utils/src/: lib.rs  macros.rs  str.rs  test_utils.rs
crates/my-utils/src/ds/: arr.rs  borrow.rs  fut.rs  list.rs  map.rs  mod.rs  ptr.rs  queue.rs  raw.rs  signal.rs  types.rs
crates/my-utils/src/ds/vec/: any_vec.rs  chunk_any_vec.rs  dedup_vec.rs  mod.rs  opt_vec.rs  vec_pool.rs
docker/: README.md  compose.yaml
docker/dev/: Dockerfile  README.md  compose.yaml
examples/: async.rs  async_io.rs  debug.rs  parallel.rs  rayon.rs  temp.rs
examples/web/: .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ssl.js
examples/web/docker/: Dockerfile  nginx.conf
examples/web/src/: lib.rs  mandelbrot.rs
src/: lib.rs
src/default/: ent_cont.rs  mod.rs  resource.rs  worker.js  worker.rs
src/ds/: arr.rs  atomic.rs  borrow.rs  fut.rs  list.rs  map.rs  mod.rs  ptr.rs  queue.rs  raw.rs  signal.rs  types.rs
src/ds/vec/: any_vec.rs  chunk_any_vec.rs  dedup_vec.rs  mod.rs  opt_vec.rs  set_vec.rs  vec_pool.rs
src/ecs/: cache.rs  cmd.rs  entry.rs  lock.rs  manager.rs  mod.rs  resource.rs  share.rs  wait.rs  web.rs  worker.rs
src/ecs/ent/: component.rs  entity.rs  mod.rs  sparse_set.rs  storage.rs
src/ecs/sched/: comm.rs  ctrl.rs  mod.rs  par.rs  task.rs
src/ecs/sys/: filter.rs  mod.rs  query.rs  request.rs  select.rs  storage.rs  system.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
src/util/: macros.rs  mod.rs  str.rs  web.rs
temp/: config.toml
test-san/: thread.rs
test-web/: Cargo.toml  package.json  playwright.config.ts  vite.config.js
test-web/src/: lib.rs
tester/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js
tester/src/: lib.rs
tester/tests/: test.spec.ts
tests/: test.rs  thread.rs
web-test/: .gitignore  vite.config.js
web-test/src/: lib.rs
web-test/tests/: test.spec.ts
