[package]
name = "my-ecs-home"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/ecoricemon/my-ecs"
license = "Apache-2.0 OR MIT"

[workspace]
members = ["crates/*", "crates/my-ecs/tests-other/web"]

[workspace.dependencies]
my-ecs = { path = "crates/my-ecs" }
my-ecs-util = { path = "crates/my-ecs-util" }
my-ecs-macros = { path = "crates/my-ecs-macros" }
syn = { version = "2.0.111" }
proc-macro2 = { version = "1.0.103" }
quote = { version = "1.0.42" }
paste = { version = "1.0.15" }
thiserror = { version = "2.0.17" }
crossbeam-deque = { version = "0.8.6" }
rayon = { version = "1.11.0" }
bitflags = { version = "2.10.0" }
dashmap = { version = "6.1.0" }
libc = { version = "0.2.178" }

# wasm32 dependencies
wasm-bindgen = { version = "0.2.106" }
wasm-bindgen-futures = { version = "0.4.56" }
js-sys = { version = "0.3.83" }
web-sys = { version = "0.3.83" }
parking_lot_core = { version = "0.9.12" }

# dev dependencies
async-io = { version = "2.6.0" }
tide = { version = "0.16.0" }
surf = { version = "2.3.2" }
futures = { version = "0.3.31" }

# wasm32 + dev dependencies
wasm-bindgen-test = { version = "0.3.56" }
console_error_panic_hook = { version = "0.1.7" }
