[workspace]
resolver = "2"
members = ["crates/*", "crates/my-ecs/tests-other/web"]

[workspace.dependencies]
my-ecs = { version = "0.1.1", path = "crates/my-ecs" }
my-ecs-macros = { version = "0.1.1", path = "crates/my-ecs-macros" }
my-utils = { version = "0.1.0", path = "crates/my-utils" }
syn = "2.0.106"
proc-macro2 = "1.0.91"
quote = "1.0.35"
paste = "1.0.15"
thiserror = "2.0.17"
crossbeam-deque = "0.8.6"
crossbeam-channel = "0.5.15"
rayon = "1.10.0"
bitflags = "2.10.0"
dashmap = "6.1.0"
libc = "0.2"
once_cell = "1.21.3"
fxhash = "0.2.1"
memoffset = "0.9.1"

# wasm32 dependencies
js-sys = "0.3.82"
web-sys = "0.3.82"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
parking_lot_core = "0.9.11"
