[package]
name = "my-ecs-macros"
version = "0.1.1"
edition = "2021"
rust-version = "1.65"
description = "A procedural macro for my-ecs crate"
repository = "https://github.com/ecoricemon/my-ecs"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { workspace = true, features = [
  "full",
  "derive",
  "extra-traits"
]}
proc-macro2 = { workspace = true }
quote = { workspace = true }
