[package]
name = "my-ecs-util"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A utility for my-ecs"
readme = "README.md" 
repository = "https://github.com/ecoricemon/my-ecs"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["rlib"]

[features]
check = []

[dependencies]
my-ecs-macros = { workspace = true }
rayon = { workspace = true }
paste = { workspace = true }
libc = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
async-io = { workspace = true }
