[package]
name = "my-ecs"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "An Entity Component System (ECS) library"
documentation = "https://docs.rs/my-ecs"
readme = "README.md" 
repository = "https://github.com/ecoricemon/my-ecs"
license = "Apache-2.0 OR MIT"
keywords = ["ecs", "parallel", "wasm"]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
check = ["my-ecs-util/check"]
stat = []

[dependencies]
my-ecs-util = { workspace = true }
my-ecs-macros = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }
crossbeam-deque = { workspace = true }
rayon = { workspace = true }
bitflags = { workspace = true }
dashmap = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
  "Blob",
  "BlobPropertyBag",
  "console",
  "DedicatedWorkerGlobalScope",
  "DomException",
  "MessageEvent",
  "Navigator",
  "Performance",
  "Url",
  "Window",
  "Worker",
  "WorkerGlobalScope",
  "WorkerNavigator",
  "WorkerOptions",
  "WorkerType",
] }
# Debug mode only, used by dashmap, feature for wasm32-unknown-unknown target.
parking_lot_core = { workspace = true, features = ["nightly"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
async-io = { workspace = true }
tide = { workspace = true }
surf = { workspace = true }
futures = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
console_error_panic_hook = { workspace = true }

[[test]]
name = "tests-other-web"
path = "tests-other/web/src/lib.rs"

# Test with sanitizer
# On linux, there may be false-positive warning in rust test harness.
[[example]]
name = "tsan"
path = "tests-other/san/thread.rs"
crate-type = ["bin"]

[[example]]
name = "async"
path = "examples/async.rs"
crate-type = ["bin"]

[[example]]
name = "async_io"
path = "examples/async_io.rs"
crate-type = ["bin"]

[[example]]
name = "parallel"
path = "examples/parallel.rs"
crate-type = ["bin"]
