[package]
name = "my-ecs"
version = "0.1.1"
edition = "2021"
rust-version = "1.65"
description = "An Entity Component System (ECS) library"
documentation = "https://docs.rs/my-ecs"
readme = "README.md"
repository = "https://github.com/ecoricemon/my-ecs"
license = "Apache-2.0 OR MIT"
keywords = ["ecs", "parallel", "wasm"]

[features]
check = ["my-utils/check"]
stat = []

[dependencies]
my-utils = { workspace = true }
my-ecs-macros = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }
crossbeam-deque = { workspace = true }
crossbeam-channel = { workspace = true }
rayon = { workspace = true }
bitflags = { workspace = true }
dashmap = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
fxhash = { workspace = true }
memoffset = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
  "Blob",
  "BlobPropertyBag",
  "console",
  "CustomEvent",
  "DedicatedWorkerGlobalScope",
  "DomException",
  "MessageEvent",
  "Navigator",
  "Performance",
  "Url",
  "Window",
  "Worker",
  "WorkerGlobalScope",
  "WorkerNavigator",
  "WorkerOptions",
  "WorkerType",
] }
# Debug mode only, used by dashmap, feature for wasm32-unknown-unknown target.
parking_lot_core = { workspace = true, features = ["nightly"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tide = "0.16.0"
surf = "2.3.2"
futures = "0.3.31"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.56"
console_error_panic_hook = "0.1.7"

[[test]]
name = "tests-other-web"
path = "tests-other/web/src/lib.rs"

[[example]]
name = "async"
path = "examples/async.rs"
crate-type = ["bin"]

[[example]]
name = "async_io"
path = "examples/async_io.rs"
crate-type = ["bin"]

[[example]]
name = "parallel"
path = "examples/parallel.rs"
crate-type = ["bin"]
