[package]
name = "my-utils"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Utilities"
readme = "README.md"
repository = "https://github.com/ecoricemon/my-ecs"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["rlib"]

[features]
check = []

[dependencies]
my-ecs-macros = { workspace = true }
rayon = { workspace = true }
paste = { workspace = true }
libc = { workspace = true }
dashmap = { workspace = true }
fxhash = { workspace = true }
rayon-core = "=1.12.1" # TODO: Remove this dependency

[dev-dependencies]
async-io = "2.5.0"
