[package]
name = "my-utils"
version = "0.1.1"
edition = "2021"
rust-version = "1.65.0"
description = "Utilities"
readme = "README.md"
repository = "https://github.com/ecoricemon/my-ecs"
license = "Apache-2.0 OR MIT"
keywords = ["utilities"]

[features]
check = []

[dependencies]
rayon = { workspace = true }
paste = { workspace = true }
libc = { workspace = true }
dashmap = { workspace = true }
fxhash = { workspace = true }
once_cell = { workspace = true }
memoffset = { workspace = true }

[dev-dependencies]
crossbeam-channel = { workspace = true }
