[package]
name = "my-ecs-macros"
description = "macros for my-ecs crate"
repository = "https://github.com/ecoricemon/my-ecs"
license = "Apache-2.0 OR MIT"
version = "0.0.2"
edition = "2021"

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.38", features = [
  "full",
  "derive",
  "extra-traits"
]}
proc-macro2 = "1.0.69"
