[package]
name = "tester"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]

[dependencies]
my-ecs = { workspace = true, features = ["stat"] }
paste = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "CustomEvent",
    "Window",
] }
console_error_panic_hook = { workspace = true }
