[package]
name = "test"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
check = ["my-ecs/check"]
stat = ["my-ecs/stat"]

[dependencies]
my-ecs = { workspace = true, features = ["stat"] }
paste = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "CustomEvent",
    "Window",
] }
console_error_panic_hook = "0.1.7"
